--- a/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
+++ b/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
@@ -14,6 +14,17 @@
 		</div>
 
 		<div class="slds-card__body">
+			<!-- Show loading spinner when loading -->
+			<template if:true={isLoading}>
+				<div class="slds-spinner slds-spinner_medium slds-spinner_brand">
+					<div class="slds-spinner__dot-a"></div>
+					<div class="slds-spinner__dot-b"></div>
+				</div>
+				<div class="slds-text-align_center slds-p-around_medium">
+					Loading articles...
+				</div>
+			</template>
+
 			<!-- Loop through recommended articles and create child components -->
 			<template if:true={recommendedArticles}>
 				<template for:each={recommendedArticles} for:item="article">
