--- a/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
+++ b/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
@@ -1,4 +1,10 @@
 <template>
+	<!-- 
+	This component is used to integrate the Service Cloud Voice Toolkit API, 
+	which provides functionalities for handling voice calls within the Salesforce Service Cloud.
+	-->
+	<lightning-service-cloud-voice-toolkit-api>
+	</lightning-service-cloud-voice-toolkit-api>
 	<div class="slds-card">
 		<!-- Added header section -->
 		<div class="slds-card__header slds-grid">
