--- a/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
+++ b/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
@@ -6,9 +6,16 @@
 	<lightning-service-cloud-voice-toolkit-api>
 	</lightning-service-cloud-voice-toolkit-api>
 	<div class="slds-card">
-		<!-- Added header section -->
-		<div class="slds-card__header slds-grid">
+		<!-- Header section with search -->
+		<div class="slds-card__header slds-grid slds-grid_vertical">
 			<header class="slds-media slds-media_center">
+				<div class="slds-media__figure">
+					<img
+						src={einsteinLogoUrl}
+						alt="Einstein Logo"
+						class="einstein-logo"
+					/>
+				</div>
 				<div class="slds-media__body">
 					<h2 class="slds-card__header-title">
 						<span class="slds-text-heading_medium"
@@ -17,8 +24,19 @@
 					</h2>
 				</div>
 			</header>
+			<!-- Added search input section -->
+			<div class="slds-p-top_small">
+				<lightning-input
+					type="search"
+					label="Search Knowledge Articles"
+					placeholder="Enter search term..."
+					value={searchTerm}
+					onchange={handleSearchChange}
+					class="slds-size_1-of-1"
+				>
+				</lightning-input>
+			</div>
 		</div>
-
 		<div class="slds-card__body">
 			<!-- Show loading spinner when loading -->
 			<template if:true={isLoading}>
@@ -31,6 +49,22 @@
 				</div>
 			</template>
 
+			<!-- Show Einstein placeholder when no search has been performed -->
+			<template if:true={showPlaceholder}>
+				<div class="slds-align_absolute-center slds-p-around_large">
+					<div class="slds-grid slds-grid_vertical slds-align_absolute-center">
+						<img
+							src={einsteinLogoUrl}
+							alt="Einstein Logo"
+							class="einstein-logo-large"
+						/>
+						<div class="slds-text-heading_small slds-p-top_medium">
+							Enter a search term to find relevant articles
+						</div>
+					</div>
+				</div>
+			</template>
+
 			<!-- Loop through recommended articles and create child components -->
 			<template if:true={recommendedArticles}>
 				<template for:each={recommendedArticles} for:item="article">
@@ -39,8 +73,8 @@
 				</template>
 			</template>
 
-			<!-- Show message if no articles are found -->
-			<template if:false={recommendedArticles}>
+			<!-- Show message if no articles are found after search -->
+			<template if:true={noArticlesFound}>
 				<div class="slds-text-align_center slds-p-around_medium">
 					No recommended articles found.
 				</div>
