--- a/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
+++ b/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.html
@@ -24,7 +24,7 @@
 					</h2>
 				</div>
 			</header>
-			<!-- Added search input section -->
+			<!-- Search input section -->
 			<div class="slds-p-top_small">
 				<lightning-input
 					type="search"
@@ -37,46 +37,59 @@
 				</lightning-input>
 			</div>
 		</div>
-		<div class="slds-card__body">
-			<!-- Show loading spinner when loading -->
-			<template if:true={isLoading}>
-				<div class="slds-spinner slds-spinner_medium slds-spinner_brand">
-					<div class="slds-spinner__dot-a"></div>
-					<div class="slds-spinner__dot-b"></div>
-				</div>
-				<div class="slds-text-align_center slds-p-around_medium">
-					Loading articles...
-				</div>
-			</template>
 
-			<!-- Show Einstein placeholder when no search has been performed -->
-			<template if:true={showPlaceholder}>
-				<div class="slds-align_absolute-center slds-p-around_large">
-					<div class="slds-grid slds-grid_vertical slds-align_absolute-center">
-						<img
-							src={einsteinLogoUrl}
-							alt="Einstein Logo"
-							class="einstein-logo-large"
-						/>
-						<div class="slds-text-heading_small slds-p-top_medium">
-							Enter a search term to find relevant articles
+		<!-- Card body with relative positioning for proper stacking -->
+		<div class="slds-card__body slds-p-around_medium">
+			<div class="content-container">
+				<!-- Loading spinner in its own container -->
+				<template if:true={isLoading}>
+					<div class="spinner-container">
+						<div class="slds-spinner_container">
+							<div
+								class="slds-spinner slds-spinner_medium slds-spinner_brand"
+								role="status"
+							>
+								<div class="slds-spinner__dot-a"></div>
+								<div class="slds-spinner__dot-b"></div>
+							</div>
+							<div class="slds-text-align_center slds-p-top_large">
+								Loading articles...
+							</div>
 						</div>
 					</div>
-				</div>
-			</template>
+				</template>
 
-			<!-- Show formatted response -->
-			<template if:true={formattedResponse}>
-				<div lwc:dom="manual" class="response-container"></div>
-				<div class="response-container slds-p-around_medium">{response}</div>
-			</template>
+				<!-- Einstein placeholder -->
+				<template if:true={showPlaceholder}>
+					<div class="slds-align_absolute-center slds-p-around_large">
+						<div
+							class="slds-grid slds-grid_vertical slds-align_absolute-center"
+						>
+							<img
+								src={einsteinLogoUrl}
+								alt="Einstein Logo"
+								class="einstein-logo-large"
+							/>
+							<div class="slds-text-heading_small slds-p-top_medium">
+								Enter a search term to find relevant articles
+							</div>
+						</div>
+					</div>
+				</template>
 
-			<!-- Show message if no response is received after search -->
-			<template if:true={noResponseReceived}>
-				<div class="slds-text-align_center slds-p-around_medium">
-					No recommended articles found.
-				</div>
-			</template>
+				<!-- Formatted response -->
+				<template if:true={formattedResponse}>
+					<div lwc:dom="manual" class="response-container"></div>
+					<div class="response-container slds-p-around_medium">{response}</div>
+				</template>
+
+				<!-- No response message -->
+				<template if:true={noResponseReceived}>
+					<div class="slds-text-align_center slds-p-around_medium">
+						No recommended articles found.
+					</div>
+				</template>
+			</div>
 		</div>
 	</div>
 </template>
