Implement audio device management and speech recognition services
- Added AudioDeviceService to manage audio device initialization, selection, and cleanup.
- Introduced SpeechRecognitionService for handling speech recognition, including error management and event handling.
- Enhanced audio recorder functionality with transcript management and improved error handling.
- Updated HTML and CSS to support new features, including a conversation container for displaying transcripts.
- Refactored audio recorder component to utilize the new services for better modularity and maintainability.

--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -65,8 +65,16 @@
 			</div>
 		</div>
 
-		<template if:false={mimeTypeSupported}>
-			<p class="error-message">MIME type not supported</p>
-		</template>
+		<div class="conversation-container">
+			<template if:true={transcripts.length}>
+				<div class="transcripts">
+					<template for:each={transcripts} for:item="transcript">
+						<div key={transcript.id} class="transcript-bubble">
+							{transcript.text}
+						</div>
+					</template>
+				</div>
+			</template>
+		</div>
 	</div>
 </template>
