Implementation as part of issue 34
- Added new AudioRecorderController Apex class to handle agent responses with a simple greeting mechanism.
- Created Logger utility class for logging operations, including debug, error, and warning messages.
- Implemented AgentService in LWC to interact with the new Apex method for fetching agent responses.
- Enhanced audioRecorder component to manage conversation flow, including user and agent messages with timestamps.
- Updated audioRecorder HTML and CSS to improve conversation display and loading indicators for agent responses.
- Added loading indicators for better user experience during agent response processing.

--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -48,15 +48,22 @@
 		</div>
 
 		<div class="conversation-container">
-			<template if:true={transcripts.length}>
-				<div class="transcripts">
-					<template for:each={transcripts} for:item="transcript">
-						<div key={transcript.id} class="transcript-bubble">
-							{transcript.text}
+			<template if:true={conversation.length}>
+				<div class="conversation">
+					<template for:each={conversation} for:item="message">
+						<div key={message.id} class={messageClass} data-type={message.type}>
+							<div class="message-bubble">{message.text}</div>
+							<div class="message-timestamp">{message.timestamp}</div>
 						</div>
 					</template>
 				</div>
 			</template>
+
+			<div if:true={isProcessingAgentResponse} class="loading-indicator">
+				<div class="loading-bubble"></div>
+				<div class="loading-bubble"></div>
+				<div class="loading-bubble"></div>
+			</div>
 		</div>
 	</div>
 </template>
