Made more enhancements as part of issue 34 feature implementation
- Added WhisperService class for audio transcription and generation using OpenAI's Whisper API.
- Implemented transcribeAudio and generateAudio methods in AudioRecorderController for handling audio processing.
- Enhanced audioRecorder component to support real-time transcription updates and audio playback of agent responses.
- Updated HTML and CSS for improved conversation display, including user names and loading indicators for audio processing.
- Refactored JavaScript to manage audio recording, transcription, and playback more efficiently, including user data retrieval.
- Introduced error handling and logging for better debugging and user feedback during audio processing.

--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -51,8 +51,20 @@
 			<template if:true={conversation.length}>
 				<div class="conversation">
 					<template for:each={conversation} for:item="message">
-						<div key={message.id} class={messageClass} data-type={message.type}>
-							<div class="message-bubble">{message.text}</div>
+						<div key={message.id} class="message" data-type={message.type}>
+							<div class="user-name">{message.userName}</div>
+							<div class="message-bubble">
+								{message.text}
+								<template if:true={message.isAgentMessage}>
+									<div class="audio-controls">
+										<div class={audioIndicatorClass}>
+											<span></span>
+											<span></span>
+											<span></span>
+										</div>
+									</div>
+								</template>
+							</div>
 							<div class="message-timestamp">{message.timestamp}</div>
 						</div>
 					</template>
