Enhance audio recorder component with new features and improvements
- Updated ESLint configuration to include additional global variables for better linting.
- Modified .vscode settings to disable XML validation for specific patterns.
- Improved CSS for the audio recorder component, adding styles for smooth scrolling, scrollbar customization, and responsive design.
- Enhanced HTML structure to include an empty state for conversations and improved message handling with fade-in and fade-out effects.
- Refactored JavaScript to manage conversation updates, including scrolling to the latest message and handling message classes dynamically.
- Introduced new methods for better audio playback management and transcription handling.
- Removed obsolete test file for the UtterSenseKnowledgeRecommendation component.

--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -43,15 +43,26 @@
 			</button>
 		</div>
 
-		<div class="audio-monitor" if:true={isRecording}>
-			<canvas class="visualizer" lwc:dom="manual"></canvas>
-		</div>
-
 		<div class="conversation-container">
+			<template if:false={conversation.length}>
+				<div class="empty-conversation">
+					<img
+						src={einsteinLogoUrl}
+						alt="Einstein Logo"
+						class="einstein-logo-large"
+					/>
+				</div>
+			</template>
 			<template if:true={conversation.length}>
 				<div class="conversation">
 					<template for:each={conversation} for:item="message">
-						<div key={message.id} class="message" data-type={message.type}>
+						<div
+							key={message.id}
+							class="message"
+							data-type={message.type}
+							data-fade-in={message.fadeIn}
+							data-fade-out={message.fadeOut}
+						>
 							<div class="user-name">{message.userName}</div>
 							<div class="message-bubble">
 								{message.text}
