Add silence detection and auto-stop features to audio recorder
- Implemented SilenceDetectionService to monitor audio levels and detect prolonged silence
- Added UI indicators for silence countdown and progress
- Enhanced audio recorder with auto-stop functionality and manual conversation stop option
- Improved conversation flow with system messages and more robust recording management
- Updated CSS to support new silence detection and system message styles
- Refactored audio recording and transcription logic for better user experience

--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -36,10 +36,10 @@
 
 			<button
 				class="stop-button"
-				onclick={stopRecording}
+				onclick={handleStopClick}
 				disabled={stopButtonDisabled}
 			>
-				Stop Recording
+				Stop Conversation
 			</button>
 		</div>
 
@@ -87,6 +87,12 @@
 				<div class="loading-bubble"></div>
 				<div class="loading-bubble"></div>
 			</div>
+		</div>
+
+		<div class={silenceIndicatorClass} if:true={isRecording}>
+			<div class="countdown-circle"></div>
+			<div class="countdown-progress" style={silenceProgressStyle}></div>
+			<span>{silenceCountdown}</span>
 		</div>
 	</div>
 </template>
