Enhance conversation UI and message rendering in AudioRecorder
- Redesigned message styling with improved visual hierarchy and type-specific bubble styles
- Added preview message support for real-time transcription rendering
- Implemented more robust message class generation with enhanced type detection
- Updated conversation layout to display newest messages at the top
- Refined silence detection parameters for more natural conversation flow
- Improved audio playback and conversation continuation logic

--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -29,11 +29,11 @@
                 </div>
             </template>
             <template if:true={conversation.length}>
-                <div class="conversation" data-conversation-length={conversation.length}>
+                <div class="conversation">
                     <template for:each={conversation} for:item="message">
                         <div
                             key={message.id}
-                            class={getMessageClass}
+                            class={handleMessageClass}
                             data-id={message.id}
                             data-type={message.type}
                             data-is-agent={message.isAgentMessage}>
