--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -23,20 +23,30 @@
         </div>
 
         <div class="conversation-container">
-            <template if:false={conversation.length}>
-                <div class="empty-conversation">
-                    <img src={einsteinLogoUrl} alt="Einstein Logo" class="einstein-logo-large" />
+            <template if:true={isAnotherParticipantTyping}>
+                <div class="typing-indicator">
+                    <template for:each={typingParticipants} for:item="participant">
+                        <div key={participant.name} class="typing-bubble">
+                            <span>{participant.name} is typing</span>
+                            <div class="typing-animation">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </div>
+                    </template>
                 </div>
             </template>
+
             <template if:true={conversation.length}>
                 <div class="conversation">
                     <template for:each={conversation} for:item="message">
-                        <div key={message.id} class="message" data-id={message.id} data-type={message.type}>
+                        <div key={message.id} class={getMessageClass} data-id={message.id} data-type={message.type}>
                             <div class="message-header">
                                 <span class="user-name">{message.userName}</span>
                                 <span class="message-timestamp">{message.timestamp}</span>
                             </div>
-                            <div class="message-bubble" data-type={message.type}>
+                            <div class={getMessageBubbleClass}>
                                 <div class="message-content">{message.text}</div>
                                 <template if:true={message.isAgentMessage}>
                                     <div class="audio-controls">
@@ -53,18 +63,10 @@
                 </div>
             </template>
 
-            <template if:true={isAnotherParticipantTyping}>
-                <div class="typing-indicator">
-                    <template for:each={typingParticipants} for:item="participant">
-                        <div key={participant.name} class="typing-bubble">
-                            <span>{participant.name} is typing...</span>
-                            <div class="typing-animation">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                        </div>
-                    </template>
+            <template if:false={conversation.length}>
+                <div class="empty-conversation">
+                    <img src={einsteinLogoUrl} alt="Einstein Logo" class="einstein-logo-large" />
+                    <p>Start a conversation by selecting a microphone and initializing recording.</p>
                 </div>
             </template>
 
