Update README and project configuration for Utter Sense deployment
- Enhanced README prerequisites with detailed feature and permission requirements
- Updated scratch org configuration to enable Einstein 1, Live Agent, and GPT features
- Refined AudioRecorder component styling with icon-based buttons and improved UX
- Added SVG icons for microphone and stop recording buttons
- Improved empty conversation messaging and interaction flow

--- a/force-app/main/default/lwc/audioRecorder/audioRecorder.html
+++ b/force-app/main/default/lwc/audioRecorder/audioRecorder.html
@@ -11,14 +11,31 @@
         </div>
 
         <div class="controls">
-            <button class="record-button" onclick={initializeRecording} disabled={micInitialized}>
-                Initialize Microphone
+            <button
+                class="icon-button mic-button"
+                onclick={initializeRecording}
+                disabled={micInitialized}
+                title="Start Recording">
+                <svg class="mic-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 14c1.66 0 3-1.34 3-3V5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3z"
+                        fill="currentColor" />
+                    <path
+                        d="M17 11c0 2.76-2.24 5-5 5s-5-2.24-5-5H5c0 3.53 2.61 6.43 6 6.92V21h2v-3.08c3.39-.49 6-3.39 6-6.92h-2z"
+                        fill="currentColor" />
+                </svg>
             </button>
 
-            <button class="record-button" onclick={startRecording} disabled={notRecording}>{recordButtonLabel}</button>
-
-            <button class="stop-button" onclick={handleStopClick} disabled={stopButtonDisabled}>
-                Stop Conversation
+            <button
+                class="icon-button stop-button"
+                onclick={handleStopClick}
+                disabled={stopButtonDisabled}
+                title="Stop Recording">
+                <svg class="stop-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
+                        fill="currentColor" />
+                </svg>
             </button>
         </div>
 
@@ -66,7 +83,7 @@
             <template if:false={conversation.length}>
                 <div class="empty-conversation">
                     <img src={einsteinLogoUrl} alt="Einstein Logo" class="einstein-logo-large" />
-                    <p>Start a conversation by selecting a microphone and initializing recording.</p>
+                    <p>{emptyConversationMessage}</p>
                 </div>
             </template>
 
